image stretch fix

--- a/FinalProject/css/team.css
+++ b/FinalProject/css/team.css
@@ -106,6 +106,7 @@ body {
 	border-radius: 50%;
 	margin-left: auto;
 	margin-right: auto;
+	object-fit: cover;
 }
 
 .team {
